@@ -2,7 +2,7 @@
  *
  * Copyright (C) 2012                                     Inria
  * Copyright (C) 2010,2011,2013,2015,2017                 CNRS
- * Copyright (C) 2011-2014,2016                           Université de Bordeaux
+ * Copyright (C) 2011-2014,2016, 2019                           Université de Bordeaux
  *
  * StarPU is free software; you can redistribute it and/or modify
  * it under the terms of the GNU Lesser General Public License as published by
@@ -35,7 +35,7 @@ void starpu_block_filter_block(void *father_interface, void *child_interface, ST
 
 	uint32_t chunk_size;
 	size_t offset;
-	_starpu_filter_nparts_compute_chunk_size_and_offset(nx, nparts, elemsize, id, 1,
+	starpu_filter_nparts_compute_chunk_size_and_offset(nx, nparts, elemsize, id, 1,
 				       &chunk_size, &offset);
 
 	STARPU_ASSERT_MSG(block_father->id == STARPU_BLOCK_INTERFACE_ID, "%s can only be applied on a block data", __func__);
@@ -74,7 +74,7 @@ void starpu_block_filter_block_shadow(void *father_interface, void *child_interf
 
 	uint32_t child_nx;
 	size_t offset;
-	_starpu_filter_nparts_compute_chunk_size_and_offset(nx, nparts, elemsize, id, 1,
+	starpu_filter_nparts_compute_chunk_size_and_offset(nx, nparts, elemsize, id, 1,
 						     &child_nx, &offset);
 	
 
@@ -111,7 +111,7 @@ void starpu_block_filter_vertical_block(void *father_interface, void *child_inte
 
 	uint32_t child_ny;
 	size_t offset;
-	_starpu_filter_nparts_compute_chunk_size_and_offset(ny, nparts, elemsize, id, block_father->ldy,
+	starpu_filter_nparts_compute_chunk_size_and_offset(ny, nparts, elemsize, id, block_father->ldy,
 				       &child_ny, &offset);
 
 	STARPU_ASSERT_MSG(block_father->id == STARPU_BLOCK_INTERFACE_ID, "%s can only be applied on a block data", __func__);
@@ -151,7 +151,7 @@ void starpu_block_filter_vertical_block_shadow(void *father_interface, void *chi
 	uint32_t child_ny;
 	size_t offset;
 
-	_starpu_filter_nparts_compute_chunk_size_and_offset(ny, nparts, elemsize, id,
+	starpu_filter_nparts_compute_chunk_size_and_offset(ny, nparts, elemsize, id,
 						     block_father->ldy,
 						     &child_ny, &offset);
 
@@ -189,7 +189,7 @@ void starpu_block_filter_depth_block(void *father_interface, void *child_interfa
 	uint32_t child_nz;
 	size_t offset;
 
-	_starpu_filter_nparts_compute_chunk_size_and_offset(nz, nparts, elemsize, id,
+	starpu_filter_nparts_compute_chunk_size_and_offset(nz, nparts, elemsize, id,
 				       block_father->ldz, &child_nz, &offset);
 
 	STARPU_ASSERT_MSG(block_father->id == STARPU_BLOCK_INTERFACE_ID, "%s can only be applied on a block data", __func__);
@@ -229,7 +229,7 @@ void starpu_block_filter_depth_block_shadow(void *father_interface, void *child_
 	uint32_t child_nz;
 	size_t offset;
 
-	_starpu_filter_nparts_compute_chunk_size_and_offset(nz, nparts, elemsize, id,
+	starpu_filter_nparts_compute_chunk_size_and_offset(nz, nparts, elemsize, id,
 						     block_father->ldz,
 						     &child_nz, &offset);
 
