@@ -19,6 +19,9 @@
 StarPU 1.3.1 (git revision xxx)
 ==============================================
 
+Small features:
+  * Add starpu_filter_nparts_compute_chunk_size_and_offset helper.
+
 StarPU 1.3.0 (git revision 24ca83c6dbb102e1cfc41db3bb21c49662067062)
 ==============================================
 
